# texture

./: .gitignore  CMakeLists.txt  readme.md  texture.sln  texture.vcxproj  texture.vcxproj.filters
texture/: bmproutine.cpp  bmproutine.hpp  main.cpp
texture.xcodeproj/: project.pbxproj
texture.xcodeproj/xcshareddata/xcschemes/: texture.xcscheme
